--- a/styles.css
+++ b/styles.css
@@ -1,4 +1,43 @@
 body {
   background-color: #e4ebfa;
   font-family: "Plus Jakarta Sans", sans-serif;
+  display: flex;
+  height: 100vh;
+  margin: 0;
+  padding: 0;
+}
+
+/* Sidebar Styling */
+.sidebar {
+  width: 250px;
+  background-color: #ffffff;
+}
+
+/* Logo within Sidebar Styling */
+.sidebar img {
+  max-width: 100%;
+  height: auto;
+}
+
+.sidebar h4 {
+  font-size: 10px;
+  color: #828fa3;
+  margin-bottom: 20px;
+}
+
+.sidebar button {
+  background-color: #635fc7;
+  color: #ffffff;
+  border: none;
+  padding: 10px 15px;
+  border-radius: 24px;
+  border-right: 0%;
+  font-size: 14px;
+  border-radius: 0 50px 50px 0;
+}
+
+@media (max-width: 425px) {
+  .sidebar {
+    display: none;
+  }
 }
