--- a/styles.css
+++ b/styles.css
@@ -57,3 +57,66 @@ body {
   background-color: #ffffff;
   width: 100%;
 }
+
+/* Main Content Area Styling */
+main {
+  display: flex;
+  padding: 20px;
+  gap: 20px;
+  overflow-x: auto;
+}
+
+.column-heading {
+  display: flex;
+  align-items: center;
+  gap: 10px;
+  margin-bottom: 10px;
+}
+
+.column-heading h4 {
+  font-size: 10px;
+  color: #828fa3;
+  margin-bottom: 20px;
+  font-size: 12px;
+}
+
+#blue-column-dot {
+  width: 12px;
+  height: 12px;
+  background-color: #49c4e5;
+  border-radius: 50%;
+  font-weight: lighter;
+}
+
+#purple-column-dot {
+  width: 12px;
+  height: 12px;
+  background-color: #8471f2;
+  border-radius: 50%;
+  font-weight: lighter;
+}
+
+#green-column-dot {
+  width: 12px;
+  height: 12px;
+  background-color: #63f7c8;
+  border-radius: 50%;
+  font-weight: lighter;
+}
+
+.task-card {
+  background-color: #ffffff;
+  font-weight: bolder;
+  padding: 15px;
+  padding-right: 90px;
+  margin-bottom: 10px;
+  border-radius: 8px;
+  box-shadow: 0px 4px 6px 0px #364e7e1a;
+}
+
+/* Horizontal to Vertical Flex for Columns on Mobile */
+@media (max-width: 768px) {
+  main {
+    flex-direction: column;
+  }
+}
