--- a/styles.css
+++ b/styles.css
@@ -63,10 +63,34 @@ body {
   justify-content: start;
   background-color: #ffffff;
   width: 100%;
+  border-bottom: 1px solid #f4f7fd;
+  padding: 10px 0 10px 25px;
+}
+
+.header h2 {
+  font-size: 24px;
+}
+
+/* Replace header text with logo on small screens */
+#header-logo {
+  display: none;
+  max-width: 50%;
+  height: auto;
+  padding: 10px auto;
+}
+
+@media (max-width: 426px) {
+  .header h2 {
+    display: none;
+  }
+
+  #header-logo {
+    display: block;
+  }
 }
 
 /* Main Content Area Styling */
-main {
+.task-columns {
   display: flex;
   padding: 20px;
   gap: 20px;
@@ -121,8 +145,8 @@ main {
 }
 
 /* Horizontal to Vertical Flex for Columns on Mobile */
-@media (max-width: 768px) {
-  main {
+@media (max-width: 426px) {
+  .task-columns {
     flex-direction: column;
   }
 }
