--- a/styles.css
+++ b/styles.css
@@ -100,14 +100,12 @@ body {
   display: flex;
   align-items: center;
   gap: 10px;
-  margin-bottom: 10px;
 }
 
 .column-heading h4 {
-  font-size: 10px;
-  color: #828fa3;
-  margin-bottom: 20px;
   font-size: 12px;
+  color: #828fa3;
+  letter-spacing: 2.5px;
 }
 
 #blue-column-dot {
@@ -137,9 +135,8 @@ body {
 .task-card {
   background-color: #ffffff;
   font-weight: bolder;
-  padding: 15px;
-  padding-right: 90px;
-  margin-bottom: 10px;
+  padding: 15px 90px 15px 15px;
+  margin: 20px 0;
   border-radius: 8px;
   box-shadow: 0px 4px 6px 0px #364e7e1a;
 }
